i rebuilt the DB, evertthing working, need to check the search, and fix the /gameOfTheseason returning value
